# PeteDataCleaner

./: .gitignore  Dev_man.md  FEATURES_COMPREHENSIVE.md  README.md  analyze_duplicates.py  analyze_owner_patterns.py  analyze_property_ownership.py  cli.py  config.py  debug_owner_objects.py  example_fast_integration.py  export_features.py  gas_code.js  hello.py  inspect_phone_data.py  monitor_process.py  owner_object_mapping_diagram.md  process_allrecords.py  property_owners_dashboard.py  pyproject.toml  quick_owner_summary.py  run_all_tests.sh  run_gas_function.py  show_data_comparison.py  test_comprehensive_preset_system.py  test_decorator_fix.py  test_end_to_end_pipeline.py  test_end_to_end_pipeline_enhanced.py  test_owner_object_real_data.py  test_persistence.py  test_preset_save.py  test_real_phone_data.py  test_smart_seller_creator.py  test_sorting_fix.py  test_ui_button_functionality.py  test_ultra_fast_pipeline.py  update_gas.py
DEV_MAN/: FRONTEND_ANALYSIS_1753959601.md  description_update_report.md  hello.py  move_rules_report.md  pipeline_optimization_changes.md  pyproject.toml  rules_comparison_report.md  standardization_report.md  whats_working_report.md
backend/: data_standardizer.py  header_mapper.py  sheets_client.py  sheets_workspace_cli.py
frontend/: README.md  __init__.py  _deprecated_gui_mapping_tool.py  constants.py  main_window.py
tests/: conftest.py  test_end_to_end_pipeline.py  test_end_to_end_pipeline_enhanced.py  test_export_speed.py  test_gui_workflow.py  test_hide_empty_columns.py  test_owner_dashboard.py  test_pandas_to_dict.py  (+11 more)
(+154 files in other folders)
