[project]
name = "petegoogle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.174.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pendulum>=3.1.0",
    "polars>=1.32.2",
    "pyarrow>=21.0.0",
    "pyqt5>=5.15.11",
    "pysimplegui>=5.0.8.3",
    "pytest-qt>=4.5.0",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.13.0",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = ["DEV_MAN"]
